- fix bug export - enregistrer date de modification -  vue synthese (doing)

--- a/style.css
+++ b/style.css
@@ -33,6 +33,14 @@ tr:nth-child(even) {
     font-weight: bold;
 }
 
+.gras {
+    font-weight: bold;
+}
+
+.surligne {
+    background-color: greenyellow;
+}
+
 .total_title {
     text-align: right;
 }
