--- a/style.css
+++ b/style.css
@@ -1,15 +1,39 @@
 :root {
-    --color1: #faf3ff;
-    --color2: #e2b9ff;
+    --color1: hsl(315, 100%, 96%);
+    --color2: hsl(315, 88%, 77%);
+}
+
+* {
+    margin: 0;
+    /* now padding and border are included in the width and height */
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
     font-family: Calibri, sans-serif;
 }
 
+.header {
+    position: fixed;
+    width: 200vw;
+    background-color: white;
+    border-bottom: solid var(--color2) 3px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    /* si scrollX bloqué => augmenté le nombre de vw */
+    width: 1200vw;
+    /* padding-top: 65px; */
+}
+
 table {
     border-collapse: collapse;
     width: 100%;
+    border: 1px black;
 }
 
 td,
@@ -18,7 +42,6 @@ th {
     text-align: left;
     padding: 8px;
 }
-
 
 tr:nth-child(even) {
     background-color: var(--color1);
@@ -50,55 +73,64 @@ tr:nth-child(even) {
     text-align: right;
 }
 
-h1,
+h1 {
+    font-size: 20px;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+h3 {
+    margin-top: 20px;
+    text-transform: capitalize;
+    border: solid var(--color2) 5px;
+    text-align: center;
+}
+
 section {
     padding: 20px;
-    margin: 0;
-}
-
-h1 {
-    border-top: solid black 2px;
-    font-size: 20px;
-}
-
-section {
-    border-top: none;
     padding-top: 0;
-    display: none;
+    min-width: 300px;
+    max-width: 700px;
+    max-height: fit-content;
+}
+
+.section_title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#viewNotice {
+    max-width: 300px;
+    text-align: justify;
+}
+
+.btn_scroll_h {
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+    border: none;
+    height: 30px;
+}
+
+@media only screen and (max-width: 1100px) {
+    section {
+        width: 100vw;
+    }
+}
+
+h2 {
+    margin-top: 20px;
 }
 
 .visible {
     display: block;
 }
 
-.toogle_img {
-    position: relative;
-    height: 50px;
-    float: right;
-    right: 5px;
-    bottom: 12px;
-    cursor: pointer;
-}
-
-.header {
-    text-align: center;
-}
-
 .app_title {
-    border: none;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-li {
-    padding: 15px;
-    padding-left: 40%;
-    border: solid rgb(143, 143, 143) 2px;
-    font-size: 20px;
-    margin: 3px;
+    text-align: left;
+    padding-left: 30px;
 }
 
 a {
@@ -113,7 +145,6 @@ a {
 
 td>input {
     background-color: var(--color1);
-    box-sizing: border-box;
     border: solid #e6e6e6 2px;
     width: 100%;
     padding: 10px;
@@ -125,7 +156,8 @@ button {
     content: none;
     padding: 10px;
     background-color: var(--color2);
-    border: solid black 3px;
+    border: none;
+    border-radius: 10px;
     font-weight: bold;
     font-size: 15px;
     cursor: pointer;
