--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 :root {
     --color1: hsl(315, 100%, 96%);
     --color2: hsl(315, 88%, 77%);
+    --color_danger: #ff9b94;
+    --color_highlight: greenyellow;
+    --color_keyword: #9effdd;
+    --iphone8_width: 375px;
+    --iphone8_height: 667px;
+    --section_padding: 20px;
 }
 
 * {
@@ -11,7 +17,8 @@
 }
 
 body {
-    font-family: Calibri, sans-serif;
+    font-family: Arial, sans-serif;
+    font-size: 15px;
 }
 
 .header {
@@ -21,13 +28,14 @@ body {
     border-bottom: solid var(--color2) 3px;
 }
 
+p {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
 .container {
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    /* si scrollX bloqué => augmenté le nombre de vw */
-    width: 1200vw;
-    /* padding-top: 65px; */
+    width: 100vw;
+    padding-top: 20px;
 }
 
 table {
@@ -43,13 +51,17 @@ th {
     padding: 5px;
 }
 
+th {
+    font-style: italic;
+}
+
 tr:nth-child(even) {
     background-color: var(--color1);
 }
 
 .keyword {
     padding: 3px;
-    background-color: rgb(158, 255, 221);
+    background-color: var(--color_keyword);
     border-radius: 20px;
     padding-left: 10px;
     padding-right: 10px;
@@ -65,11 +77,11 @@ tr:nth-child(even) {
 }
 
 .highlight {
-    background-color: greenyellow;
+    background-color: var(--color_highlight);
 }
 
 .highlight_danger {
-    background-color: #ff9b94;
+    background-color: var(--color_danger)
 }
 
 .total_title {
@@ -78,38 +90,64 @@ tr:nth-child(even) {
 
 h1 {
     font-size: 20px;
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    font-family: 'Brush Script MT', cursive;
 }
 
-
+h1.app_title {
+    padding-left: 20px;
+    text-align: left;
+    font-weight: bold;
+    font-size: small;
+    text-decoration: underline;
+    padding-bottom: 5px;
+}
 
 section {
-    padding: 20px;
+    padding-left: var(--section_padding);
+    padding-right: 5px;
     padding-top: 0;
-    min-width: 300px;
     max-width: 700px;
     max-height: fit-content;
 }
 
-.section_title {
+.view_header {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-#viewNotice {
-    max-width: 300px;
-    text-align: justify;
+img.section_gotop {
+    width: 30px;
 }
 
-.btn_scroll_h {
-    position: relative;
+section,
+.view_header {
+    min-width: var(--iphone8_width)- var(--section_padding);
+}
+
+.view_header_title {
+    display: flex;
+    align-items: center;
+}
+
+.view_header_title_img {
+    height: 25px;
+    padding-right: 5px;
+}
+
+.view_header_toggle_img {
+    height: 50px;
+    padding: 12px;
     cursor: pointer;
-    padding: 0;
-    border: none;
-    height: 30px;
+}
+
+.view_body {
+    padding-bottom: 30px;
+    padding-right: 15px;
+}
+
+hr {
+    border-color: var(--color2);
 }
 
 @media only screen and (max-width: 1100px) {
@@ -124,11 +162,6 @@ h2 {
 
 .visible {
     display: block;
-}
-
-.app_title {
-    text-align: left;
-    padding-left: 30px;
 }
 
 a {
@@ -158,24 +191,27 @@ option {
 input::file-selector-button,
 button {
     content: none;
-    padding: 10px;
-    background-color: var(--color2);
-    border: none;
-    border-radius: 10px;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: solid var(--color2) 4px;
+    border-radius: 5px;
     font-weight: bold;
     font-size: 15px;
+    font-style: italic;
     cursor: pointer;
+    color: black;
 }
 
 button {
     margin-top: 20px;
-    color: black;
 }
 
-.td_button {
+button.td_button {
     margin: 0;
     padding: 0;
     background: none;
+    border: none;
 }
 
 .tr_sub_title {
@@ -196,4 +232,11 @@ button {
 
 .category_title>h3 {
     text-transform: capitalize;
+}
+
+img.impex {
+    width: 55px;
+    padding: 10px;
+    border: solid var(--color2) 4px;
+    border-radius: 5px;
 }
