--- a/planning/style.css
+++ b/planning/style.css
@@ -3,3 +3,28 @@
       padding: 0;
       box-sizing: border-box;
   }
+
+  #container {
+      padding: 5px;
+  }
+
+  input,
+  button {
+      all: unset;
+      text-align: center;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      background-color: rgb(232, 232, 232);
+      border-radius: 5px;
+      border: 1px solid black;
+      width: fit-content;
+  }
+
+  button {
+      padding-right: 10px;
+      padding-left: 10px;
+      background: none;
+      font-weight: bolder;
+      background-color: rgb(255, 255, 255);
+      margin-left: 20px;
+  }
