--- a/planning/style.css
+++ b/planning/style.css
@@ -2,6 +2,7 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-family: monospace;
   }
 
   .hidden {
@@ -18,10 +19,9 @@
       text-align: center;
       padding-top: 8px;
       padding-bottom: 8px;
-      background-color: rgb(232, 232, 232);
-      border-radius: 5px;
+      margin-bottom: 5px;
       border: 1px solid black;
-      width: fit-content;
+      min-width: fit-content;
   }
 
   button {
@@ -29,7 +29,7 @@
       padding-left: 10px;
       background: none;
       font-weight: bolder;
-      background-color: rgb(255, 255, 255);
+      background-color: rgb(213, 213, 213);
   }
 
   .menu {
