[planning] v1.3.0-beta: - feat. acces offline via webworker - bug. btn add disparait - feat. grossir boutons edit - bug. verification de la date avant save + retirer vleur ° minutes - bug. affichage jour ferié - bug. new date

--- a/planning/style.css
+++ b/planning/style.css
@@ -102,6 +102,11 @@
       padding: 3px;
   }
 
+  .btn_edit {
+      width: 30px;
+      margin-right: 20px;
+  }
+
   #container {
       padding: 5px;
   }
