--- a/planning/style.css
+++ b/planning/style.css
@@ -1,162 +1,337 @@
-  * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: monospace;
-      font-size: 10px;
-  }
+:root {
+    --tonic1-color: #2b9adf;
+    --tonic2-color: #85df2b;
+    --bg-color: hsl(0, 0%, 10%);
+    --bg2-color: hsl(0, 0%, 12%);
+    --bg3-color: hsl(0, 0%, 16%);
+    --fg-color: #f0f0f0;
+    --fg2-color: #757575;
+    --danger-color: #df2b2b;
 
-  button,
-  input {
-      all: unset;
-      text-align: center;
-      padding-top: 15px;
-      margin-bottom: 5px;
-      min-width: 20px;
-  }
+    --main-font-size: 11px;
+}
 
-  textarea {
-      all: unset;
-      width: 100%;
-  }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: monospace;
+    font-size: var(--main-font-size);
+    color: var(--fg-color);
+}
 
-  input,
-  textarea {
-      border-bottom: 1px solid rgb(189, 189, 189);
-      color: rgb(79, 43, 223);
-  }
+body {
+    background-color: var(--bg-color);
+}
 
-  button {
-      background-color: rgb(199, 199, 199);
-      width: 30px;
-      padding: 5px;
-      padding-top: 15px;
-      padding-bottom: 15px;
-      margin-right: 5px;
-      border-radius: 3px;
-      font-weight: bold;
-  }
 
-  select {
-      padding: 7px;
-      color: rgb(79, 43, 223);
-  }
 
-  select,
-  textarea,
-  input {
-      /* pour eviter que IOS zoom la page si < 16px  */
-      font-size: 16px;
-      border-radius: 3px;
-  }
 
-  hr {
-      height: 1px;
-      background-color: rgb(196, 196, 196);
-      border: none;
-  }
 
-  .bigger {
-      font-size: larger;
-  }
 
-  .bold {
-      font-weight: bold;
-  }
 
-  .italic {
-      font-style: italic;
-  }
 
-  .hidden {
-      display: none;
-  }
 
-  .menu {
-      margin-top: 3px;
-      margin-bottom: 5px;
-  }
 
-  .three_month {
-      display: flex;
-  }
 
-  .three_month>div {
-      border: solid rgb(214, 214, 214) 1px;
-      padding: 2px;
-  }
+hr {
+    height: 1px;
+    background-color: rgb(196, 196, 196);
+    border: none;
+}
 
-  .gone {
-      text-decoration: line-through;
-      color: rgb(44, 44, 44);
-  }
+.larger {
+    font-size: larger;
+}
 
-  .soon {
-      background-color: rgb(226, 255, 182);
-  }
+.x-larger {
+    font-size: x-large;
+}
 
-  .strong {
-      font-weight: bold;
-      background-color: rgb(255, 255, 155);
-  }
+.bold {
+    font-weight: bold;
+}
 
-  .panel {
-      position: fixed;
-      bottom: 0px;
-      left: 0px;
-      width: 100%;
-      background-color: rgb(229, 229, 229);
-      padding: 3px;
-  }
+.italic {
+    font-style: italic;
+}
 
-  .btn_edit {
-      width: 30px;
-      margin-right: 15px;
-      margin-top: 5px;
-  }
+.hidden {
+    display: none;
+}
 
-  #container {
-      padding: 5px;
-  }
 
-  #current_week {
-      height: 220px;
-      overflow-y: scroll;
-      border: solid 2px #e7e7e7;
-  }
 
-  #event_title {
-      width: 100%;
-      text-align: left;
-  }
+.three_month {
+    display: flex;
+}
 
-  #today {
-      width: fit-content;
-      background-color: rgb(198, 250, 255);
-  }
+.three_month>div {
+    border: solid rgb(214, 214, 214) 1px;
+    padding: 2px;
+}
 
-  #select_events {
-      max-width: 190px;
-  }
+.gone {
+    text-decoration: line-through;
+    color: rgb(44, 44, 44);
+}
 
-  #event_details {
-      margin-top: 2px;
-      margin-bottom: 90px;
-      padding: 5px;
-      border: solid 1px #e7e7e7;
-  }
+.soon {
+    background-color: rgb(226, 255, 182);
+}
 
-  #events {
-      max-height: 283px;
-      overflow-y: scroll;
-  }
+.strong {
+    font-weight: bold;
+    background-color: rgb(255, 255, 155);
+}
 
-  #events_search_title {
-      text-align: left;
-      width: 125px;
-      margin-left: 3px;
-  }
+#event_title {
+    width: 100%;
+    text-align: left;
+}
 
-  #events_search_title {
-      width: 80%;
-  }
+#event_details {
+    margin-top: 2px;
+    margin-bottom: 90px;
+    padding: 5px;
+    border: solid 1px #e7e7e7;
+}
+
+#events_search_title {
+    text-align: left;
+    width: 125px;
+    margin-left: 3px;
+}
+
+#events_search_title {
+    width: 80%;
+}
+
+
+
+
+
+.tonic_2 {
+    color: var(--tonic2-color);
+}
+
+.flaot_right {
+    float: right;
+}
+
+.highlight_1 {
+    background-color: var(--tonic1-color);
+}
+
+.center {
+    text-align: center;
+}
+
+.app_title {
+    margin-top: 3px;
+    font-size: 8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Form  */
+
+button,
+input,
+textarea,
+select {
+    all: unset;
+}
+
+textarea {
+    width: 100%;
+    /* empecher redisionnement */
+    resize: none;
+    /* permet les retours à la ligne automatiques */
+    white-space: pre-wrap;
+    /* coupe les mots longs s’il le faut */
+    word-wrap: break-word;
+}
+
+select {
+    background-color: var(--bg3-color);
+    color: var(--fg2-color);
+}
+
+select::-webkit-scrollbar {
+    width: 0px;
+}
+
+select::-webkit-scrollbar-thumb {}
+
+select::-webkit-scrollbar-thumb:hover {}
+
+option {
+    color: var(--fg2-color);
+}
+
+input,
+textarea,
+select {
+    color: var(--tonic1-color);
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.form_group,
+.form_control {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form_group {
+    margin-top: 5px;
+    padding: 5px;
+    background-color: var(--bg3-color);
+    border-radius: 5px;
+}
+
+.form_control {
+    margin-top: 10px;
+    margin-bottom: 8px;
+}
+
+.form_btn,
+.menu_btn {
+    background: none;
+    width: fit-content;
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--tonic1-color);
+}
+
+.form_label {
+    color: var(--fg2-color);
+}
+
+.form_btn_danger {
+    color: var(--danger-color);
+}
+
+.form_btn_warning {
+    color: var(--tonic2-color);
+}
+
+.form_select_group {
+    display: flex;
+}
+
+.form_select_group>span {
+    color: var(--fg2-color);
+}
+
+.filter_label {
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
+
+
+
+
+.nav {
+    position: absolute;
+    bottom: 0px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.menu {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: var(--bg2-color);
+    padding-bottom: 8px;
+    padding-top: 8px;
+}
+
+.menu_btn {
+    padding-left: 13px;
+    padding-right: 13px;
+    border: solid 2px var(--tonic1-color);
+    border-radius: 7px;
+}
+
+
+
+
+
+
+
+
+/* Planning */
+
+.week {
+    height: 336px;
+    overflow-y: scroll;
+}
+
+.event {
+    margin-top: 3px;
+}
+
+.events {
+    overflow-y: scroll;
+    max-height: 320px;
+    margin-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.week_events {
+    display: flex;
+    flex-direction: column;
+    margin-top: 3px;
+}
+
+.week_events>div {
+    display: flex;
+    flex-direction: column;
+}
+
+.week_events_title {
+    font-size: larger;
+    font-weight: bold;
+    color: var(--tonic1-color);
+    width: fit-content;
+    margin-bottom: 3px;
+}
+
+.view_planning_nav {
+    position: absolute;
+    bottom: 0px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.view_planning_nav .menu_btn {
+    border: none;
+}
+
+.event_date {
+    display: flex;
+    justify-content: space-between;
+}
